gl31-master/src/test/deca/context/valid/complet/cast.deca
// Description:
//    Test valide pour complet context
//
// Resultats:
//    Succes
//
// Historique:
//    cree le 24/01/2021
{
    int a;
    float f = (float)(a);
}