gl31-master/src/test/deca/context/invalid/complet/no_type.deca
// Description:
//    Test invalide pour complet context
//
// Resultats:
//    Ligne 12: Erreur, le type A n'existe pas
//
// Historique:
//    cree le 20/01/2021
{
    A a;
}
